fixed gui positions for testing, inputs now working properly

--- a/index.html
+++ b/index.html
@@ -6,21 +6,23 @@
     <title>Document</title>
     <link rel ="stylesheet" href = "styles.css">
 </head>
-<button id="num1">1</button>
-<button id="num2">2</button>
-<button id="num3">3</button>
-<button id="num4">4</button>
-<button id="num5">5</button>
-<button id="num6">6</button>
-<button id="num7">7</button>
-<button id="num8">8</button>
-<button id="num9">9</button>
-<button id="num0">0</button>
-<button id="toAdd">+</button>
-<button id="toSubt">-</button>
-<button id="toMult">x</button>
-<button id="toDiv">/</button>
-<button id="toEql">=</button>
+<div class = "container">
+    <button id="num1">1</button>
+    <button id="num2">2</button>
+    <button id="num3">3</button>
+    <button id="num4">4</button>
+    <button id="num5">5</button>
+    <button id="num6">6</button>
+    <button id="num7">7</button>
+    <button id="num8">8</button>
+    <button id="num9">9</button>
+    <button id="num0">0</button>
+    <button id="toAdd">+</button>
+    <button id="toSubt">-</button>
+    <button id="toMult">x</button>
+    <button id="toDiv">/</button>
+    <button id="toEql">=</button>
+</div>
 
 <body>
 <script src = "js-scripts.js"></script>
