--- a/index.html
+++ b/index.html
@@ -9,22 +9,26 @@
 
 <body>
 <div class = "container">
-    <button id = "num1" value = "1">1</button>
-    <button id = "num2" value = "2">2</button>
-    <button id = "num3" value = "3">3</button>
-    <button id = "num4" value = "4">4</button>
-    <button id = "num5" value ="5">5</button>
-    <button id = "num6" value = "6">6</button>
-    <button id = "num7" value = "7">7</button>
-    <button id = "num8" value = "8">8</button>
-    <button id = "num9" value = "9">9</button>
-    <button id = "num0" value = "0">0</button>
-    <button id="add">+</button>
-    <button id="subtract">-</button>
-    <button id="multiply">x</button>
-    <button id="divide">/</button>
-    <button id="equals">=</button>
-    <button id="clear">CE</button>
+    <div class = "numbers">
+        <button id = "num1">1</button>
+        <button id = "num2">2</button>
+        <button id = "num3">3</button>
+        <button id = "num4">4</button>
+        <button id = "num5">5</button>
+        <button id = "num6">6</button>
+        <button id = "num7">7</button>
+        <button id = "num8">8</button>
+        <button id = "num9">9</button>
+        <button id = "num0">0</button>
+    </div>
+    <div class = "operators">
+        <button id="add">+</button>
+        <button id="subtract">-</button>
+        <button id="multiply">x</button>
+        <button id="divide">/</button>
+        <button id="equals">=</button>
+        <button id="clear">CE</button>
+    </div>
 </div>
 <script src = "js-scripts.js"></script>
 </body>
