--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
 <div class = "container">
+    <div class = "calcDisplay"></div>
         <button class = "numbers" id = "num1" value = "1">1</button>
         <button class = "numbers"  id = "num2" value = "2">2</button>
         <button class = "numbers"  id = "num3" value = "3">3</button>
@@ -19,6 +20,7 @@
         <button class = "numbers"  id = "num8" value = "8">8</button>
         <button class = "numbers"  id = "num9" value = "9">9</button>
         <button class = "numbers"  id = "num0" value = "0">0</button>
+        <button class = "numbers" id = "period" value = ".">.</button>
         <button class = "operators" id="add" value = "+">+</button>
         <button class = "operators" id="subtract" value = "-">-</button>
         <button class = "operators" id="multiply" value = "x">x</button>
