--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 <div class = "container">
-    <div class = "calcDisplay"></div>
+    <div class = "calcDisplay">0</div>
         <button class = "numbers" id = "num1" value = "1">1</button>
         <button class = "numbers"  id = "num2" value = "2">2</button>
         <button class = "numbers"  id = "num3" value = "3">3</button>
