--- a/index.html
+++ b/index.html
@@ -10,23 +10,24 @@
 <body>
 <div class = "container">
     <div class = "calcDisplay">0</div>
-        <button class = "numbers" id = "num1" value = "1">1</button>
-        <button class = "numbers"  id = "num2" value = "2">2</button>
-        <button class = "numbers"  id = "num3" value = "3">3</button>
-        <button class = "numbers"  id = "num4" value = "4">4</button>
-        <button class = "numbers"  id = "num5" value = "5">5</button>
-        <button class = "numbers"  id = "num6" value = "6">6</button>
-        <button class = "numbers"  id = "num7" value = "7">7</button>
-        <button class = "numbers"  id = "num8" value = "8">8</button>
-        <button class = "numbers"  id = "num9" value = "9">9</button>
-        <button class = "numbers"  id = "num0" value = "0">0</button>
-        <button class = "numbers" id = "period" value = ".">.</button>
-        <button class = "operators" id="add" value = "+">+</button>
-        <button class = "operators" id="subtract" value = "-">-</button>
-        <button class = "operators" id="multiply" value = "x">x</button>
-        <button class = "operators" id="divide" value = "/">/</button>
-        <button id="equals" value = "=">=</button>
-        <button id="clear" value = "CE">CE</button>
+    <button class = "operators" id="add" value = "+">+</button>
+    <button class = "operators" id="subtract" value = "-">-</button>
+    <button class = "operators" id="multiply" value = "x">x</button>
+    <button class = "operators" id="divide" value = "/">/</button>
+    <button class = "numbers" id = "num1" value = "1">1</button>
+    <button class = "numbers"  id = "num2" value = "2">2</button>
+    <button class = "numbers"  id = "num3" value = "3">3</button>
+    <button id="clear" value = "CE">CE</button>
+    <button class = "numbers"  id = "num4" value = "4">4</button>
+    <button class = "numbers"  id = "num5" value = "5">5</button>
+    <button class = "numbers"  id = "num6" value = "6">6</button>
+    <button id = "backspace">del</button>
+    <button class = "numbers"  id = "num7" value = "7">7</button>
+    <button class = "numbers"  id = "num8" value = "8">8</button>
+    <button class = "numbers"  id = "num9" value = "9">9</button>
+    <button class = "numbers" id = "period" value = ".">.</button>
+    <button class = "numbers"  id = "num0" value = "0">0</button>
+    <button id="equals" value = "=">=</button>
 </div>
 <script src = "js-scripts.js"></script>
 </body>
